src/test/ui/parser/import-from-rename.stderr
error: expected `;`, found keyword `as`
  --> $DIR/import-from-rename.rs:5:16
   |
LL | use foo::{bar} as baz;
   |                ^^ expected `;`

error: aborting due to previous error

